--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body{
     margin:0;
     padding:0;
     font-family:sans-serif;
-    /* background:#000; */
+    background-color: rgb(255, 255, 143);
 }
 
 h1 {
