--- a/src/index.css
+++ b/src/index.css
@@ -1,76 +1,70 @@
-body{
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+body {
     margin:0;
     padding:0;
-    font-family:sans-serif;
-    background-color: rgb(255, 255, 143);
+    font-family: 'Trebuchet MS', sans-serif;
+    background-color: #7EE8FA;
+}
+
+
+.navbar {
+    background-color: #32CD32;
+    padding: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+/* .navbar-brand img {
+    width: 100px;
+    border-radius: 20px;
+} */
+.nav-links {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    gap: 2rem;
+}
+.nav-links a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: x-large;
+}
+.nav-links a:hover {
+    font-size: xx-large;
+    color: #FFF07C;
 }
 
 h1 {
-    /* text-align: center; */
+    /* text-align: center;*/
 } 
 .header{
-    position: relative;
-    top: 65px;
-    left:50%;
-    right: 50%;
-    transform: prespective(1000px) translate(-50%,-50%);
-    transition:0.5s;
-}
-.header:hover{
-    transform:prespective(1000px) translate(-50%,-50%);
-    transform:skewY(0deg);
-}
-.header h1 span{
-    position: absolute;
-    top:0;
-    left:0;
-    transform:translate(-50%,-50%);
-    margin:0;
-    padding:0;
+    text-align: center;
+    color: #FFF07C;
+    font-size: 3em;
     text-transform: uppercase;
-    font-size: 6em;
-    color: lightskyblue;
-    transform-style:preserve-3d;
-    transition:0.8s;
+    margin-top: -3%;
 }
-.header:hover h1 span:nth-child(1){
-    clip-path: polygon(0 0, 100% 0, 100% 45%, 0 45%);
-}
-.header:hover h1 span:nth-child(2){
-    color:white;
-    transform:translate(-50%,-50%) skewX(-60deg);
-    left:-38px;
-    clip-path: polygon(0 45%, 100% 45%, 100% 55%, 0 55%);
-}
-.header:hover h1 span:nth-child(3){
-    transform:translate(-50%,-50%) skewY(0deg);
-    left:-76px;
-    clip-path: polygon(0 55%, 100% 55%, 100% 100%, 0 100%);
-}
-.header h1 span:nth-child(2), 
-.header h1 span:nth-child(3){
-    transform:translate(-50%,-50%) skewX(0deg);
-    left:0;
-    color: lightskyblue;
-}
+/* .header:hover{
+    font-size: 5em;
+} */
 
 .motto {
-    margin-top: 200px;
+    margin-top: -4%;
 }
 
 .rules {
-    color: red;
-    border: solid red 5px;
-    border-radius: 10px;   
+    color: red;  
+    text-align: center;
+    margin-top: auto;
 }
 
 
 h2 {
     text-align: center;
     font-size: xx-large;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 
@@ -79,16 +73,49 @@ h3 {
 }
 
 h4 {
-    /* text-align: center; */
-    border: solid red 5px;
-    border-radius: 10px;
-    padding-left: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    color: red;
 }
 
+input {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 25em;
+    width: 50%;
+    border: solid 5px;
+    border-radius: 20px;
+    margin: auto;
+}
+
+.intro-button {
+    background-color: #32CD32;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    margin-top: 15px;
+    margin-bottom: 20px;
+    border: solid black 5px;
+    border-radius: 5px;
+    height: 3em;
+    width: 15%;
+    text-align: center;
+    color: white;
+    font-family: 'Trebuchet MS', sans-serif;
+}
+
+.intro-button:hover {
+    font-size: larger;
+    color: #FFF07C;
+}
 
 .footer {
     position: absolute;
-    margin-top: 100px;
+    /* margin-top: 100px; */
     background-color: #32CD32; 
     color: white; 
     padding: 0rem;
@@ -129,34 +156,7 @@ h4 {
 .foot a:hover {
     text-decoration: underline;
     font-size: larger;
+    color: #FFF07C;
 }
 
 
-.navbar {
-    background-color: #32CD32;
-    padding: 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-/* .navbar-brand img {
-    width: 100px;
-    border-radius: 20px;
-} */
-.nav-links {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    gap: 2rem;
-}
-.nav-links a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: x-large;
-}
-.nav-links a:hover {
-    text-decoration: underline;
-    font-size: xx-large;
-}
