--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,13 @@ body {
     margin-top: auto;
 }
 
+h1 {
+    text-align: center;
+    color: #FFF07C;
+    margin-top: 2%;
+    margin-bottom: -2%;
+}
+
 h2 {
     text-align: center;
     font-size: xx-large;
@@ -59,6 +66,19 @@ h2 {
     color: #FFF07C;
     font-size: 3em;
     margin-top: 2%;
+}
+
+#account-user-details {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: x-large;
+    border: solid black 5px;
+    width: 20%;
+    padding: 10px;
+    margin-top: 5%;
+    background-color: #32CD32;
+    /* color: #fff; */
+    border-radius: 8px;
 }
 
 h3 {
@@ -88,12 +108,29 @@ p {
     margin: auto;
 }
 
-.login {
+.switch-link {
+    background-color: red;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    margin-top: 15px;
+    border: solid black 5px;
+    border-radius: 5px;
+    height: 3em;
+    width: 15%;
+    color: white;
+    font-family: 'Trebuchet MS', sans-serif; 
+}
+.switch-link:hover {
+    font-size: larger;
+}
+
+.login-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 7em;
     width: 50%;
     margin: auto;
     margin-top: 1%;
@@ -101,9 +138,9 @@ p {
 
 input {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     border: solid 4px;
     border-radius: 5px;
 }
@@ -114,22 +151,21 @@ button {
     align-items: center;
     justify-content: center;
     margin: auto;
-    margin-top: 20px;
-    border: solid black 4px;
+    margin-top: 15px;
+    border: solid black 5px;
     border-radius: 5px;
     height: 3em;
-    width: 10%;
+    width: 15%;
     color: white;
     font-family: 'Trebuchet MS', sans-serif; 
 }
 
 button:hover {
     font-size: larger;
-    color: white;
 }
 
 .intro-button {
-    background-color: #FFF07C;
+    background-color: red;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -141,12 +177,11 @@ button:hover {
     height: 3em;
     width: 15%;
     text-align: center;
-    color: #32CD32;
+    color: white;
     font-family: 'Trebuchet MS', sans-serif;
 }
 .intro-button:hover {
     font-size: larger;
-    color: #32CD32;
 }
 
 .game-quote {
@@ -212,9 +247,7 @@ button:hover {
 
 .game-p1:hover {
     font-size: larger;
-    color: whtie;
 }
-
 
 .footer {
     position: absolute;
@@ -262,7 +295,4 @@ button:hover {
     color: #FFF07C;
 }
 
-#account-user-details {
-    display: flex;
-    flex-wrap: wrap;
-}
+
