--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,9 @@ body {
 .motto {
     margin-top: -3%;
 }
+.intro-premise {
+    text-align: center;
+}
 .rules {
     color: red;  
     text-align: center;
@@ -50,8 +53,8 @@ body {
 h1 {
     text-align: center;
     color: #FFF07C;
-    margin-top: 2%;
-    margin-bottom: -2%;
+    margin-top: 4%;
+    /* margin-bottom: -2%; */
 }
 
 h2 {
@@ -73,17 +76,52 @@ h2 {
     flex-wrap: wrap;
     font-size: x-large;
     border: solid black 5px;
-    width: 20%;
-    padding: 10px;
-    margin-top: 5%;
-    background-color: #32CD32;
+    width: 30%;
+    /* padding: 10px; */
+    /* margin-top: 5%; */
+    margin-left: 5%;
+    background-color: white;
     /* color: #fff; */
     border-radius: 8px;
+}
+.account-played {
+    background-color: #FFF07C;
+    border-bottom: solid 5px;
+    width: 100%;
+}
+.account-played:hover {
+    font-size: larger;
+}
+.account-won {
+    background-color: #32CD32;
+    border-bottom: solid 5px;
+    width: 100%;
+}
+.account-won:hover {
+    font-size: larger;
+}
+.account-lost {
+    background-color: red;
+    border-bottom: solid 5px;
+    width: 100%;
+}
+.account-lost:hover {
+    font-size: larger;
+}   
+.account-ratio {
+    background-color: #7EE8FA;
+    border-top: solid 5px;
+    width: 100%;
+}
+.account-ratio:hover {
+    font-size: larger;
 }
 
 h3 {
     text-align: center;
 }
+
+
 
 h4 {
     display: flex;
