--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,6 @@ body {
 h1 {
     text-align: center;
     color: #FFF07C;
-    margin-top: 4%;
 }
 
 h2 {
@@ -148,6 +147,18 @@ p {
     margin: auto;
 }
 
+
+.login-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* width: 50%; */
+    /* margin: auto; */
+    margin-top: 1%;
+    border: solid orange 5px;
+}
+
 .switch-link {
     background-color: red;
     display: flex;
@@ -155,25 +166,11 @@ p {
     justify-content: center;
     margin: auto;
     margin-top: 15px;
-    border: solid black 5px;
+    border: solid purple 5px;
     border-radius: 5px;
-    height: 3em;
-    width: auto;
+    width: 90%;
     color: white;
     font-family: 'Trebuchet MS', sans-serif; 
-}
-.switch-link:hover {
-    font-size: larger;
-}
-
-.login-container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    /* width: 50%; */
-    margin: auto;
-    margin-top: 1%;
 }
 
 .uud {
@@ -194,6 +191,7 @@ input {
     justify-content: center;
     flex-direction: row;
     border: solid 4px;
+    padding-block: 5%;
     border-radius: 5px;
 }
 
@@ -207,14 +205,13 @@ input {
 button {
     background-color: red;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* margin: auto; */
-    /* margin-top: 15px; */
     border: solid black 5px;
     border-radius: 5px;
     height: 3em;
-    width: 15%;
+    /* width: 15%; */
     color: white;
     font-family: 'Trebuchet MS', sans-serif; 
 }
