--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,8 @@ body {
     justify-content: space-between;
 }
 .navbar-brand {
-    margin-top: -3%;
-    margin-bottom: -3%;
+    margin-top: -9%;
+    margin-bottom: -9%;
 }
 .nav-button {
     width: 20%;
@@ -40,7 +40,8 @@ body {
     color: #FFF07C;
     font-size: 3em;
     text-transform: uppercase;
-    margin-top: -5%;
+    margin-top: -3%;
+    margin-bottom: -7%;
 }
 .motto {
     margin-top: -5%;
@@ -66,58 +67,7 @@ h2 {
     margin-bottom: auto;
 }
 
-.game-h2 {
-    text-align: center;
-    color: #FFF07C;
-    font-size: 3em;
-    margin-top: 2%;
-}
 
-#account-user-details {
-    display: flex;
-    flex-wrap: wrap;
-    font-size: x-large;
-    border: solid black 5px;
-    width: 30%;
-    /* padding: 10px; */
-    /* margin-top: 5%; */
-    margin-left: 5%;
-    background-color: white;
-    /* color: #fff; */
-    border-radius: 8px;
-}
-.account-played {
-    background-color: #FFF07C;
-    border-bottom: solid 5px;
-    width: 100%;
-}
-.account-played:hover {
-    font-size: larger;
-}
-.account-won {
-    background-color: #32CD32;
-    border-bottom: solid 5px;
-    width: 100%;
-}
-.account-won:hover {
-    font-size: larger;
-}
-.account-lost {
-    background-color: red;
-    border-bottom: solid 5px;
-    width: 100%;
-}
-.account-lost:hover {
-    font-size: larger;
-}   
-.account-ratio {
-    background-color: #7EE8FA;
-    border-top: solid 5px;
-    width: 100%;
-}
-.account-ratio:hover {
-    font-size: larger;
-}
 
 h3 {
     text-align: center;
@@ -146,80 +96,6 @@ p {
     border-radius: 20px;
     margin: auto;
 }
-
-
-.login-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    /* width: 50%; */
-    /* margin: auto; */
-    margin-top: 1%;
-    border: solid orange 5px;
-}
-
-.switch-link {
-    background-color: red;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: auto;
-    margin-top: 15px;
-    border: solid purple 5px;
-    border-radius: 5px;
-    width: 90%;
-    color: white;
-    font-family: 'Trebuchet MS', sans-serif; 
-}
-
-.uud {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    border-radius: 5px;
-    width: 100%;
-    margin-top: 1%;
-    /* border: solid 3px; */
-    gap: 5px
-}
-
-input {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    border: solid 4px;
-    padding-block: 5%;
-    border-radius: 5px;
-}
-
-.update-buttons {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    gap: 5px
-}
-
-button {
-    background-color: red;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border: solid black 5px;
-    border-radius: 5px;
-    height: 3em;
-    /* width: 15%; */
-    color: white;
-    font-family: 'Trebuchet MS', sans-serif; 
-}
-
-button:hover {
-    font-size: larger;
-}
-
 .intro-button {
     background-color: red;
     display: flex;
@@ -240,6 +116,78 @@ button:hover {
     font-size: larger;
 }
 
+.login-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; */
+    /* width: 50%; */
+    /* margin: auto; */
+    margin-top: 1%;
+}
+.switch-link {
+    background-color: red;
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+    margin: auto;
+    border: solid purple 5px;
+    border-radius: 5px;
+    width: 90%;
+    color: white;
+    font-family: 'Trebuchet MS', sans-serif; 
+}
+
+button {
+    background-color: red;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: solid black 5px;
+    border-radius: 5px;
+    height: 3em;
+    /* width: 15%; */
+    color: white;
+    font-family: 'Trebuchet MS', sans-serif; 
+}
+button:hover {
+    font-size: larger;
+}
+
+input {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* flex-direction: row; */
+    border: solid 4px;
+    padding-block: 5%;
+    border-radius: 5px;
+}
+
+.update-buttons {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 5px
+}
+.uud {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    border-radius: 5px;
+    width: 100%;
+    margin-top: 1%;
+    gap: 5px
+}
+
+.game-h2 {
+    text-align: center;
+    color: #FFF07C;
+    font-size: 3em;
+    margin-top: 2%;
+}
 .game-quote {
     background-color: red;
     display: flex;
