--- a/src/index.css
+++ b/src/index.css
@@ -5,56 +5,6 @@ body {
     background-color: #7EE8FA;
 }
 
-.navbar {
-    background-color: #32CD32;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.navbar-brand {
-    margin-top: -9%;
-    margin-bottom: -9%;
-}
-.nav-button {
-    width: 20%;
-}
-.nav-links {
-    display: flex;
-    list-style: none;
-    width: 36%;
-    gap: 3rem;
-}
-.nav-links a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: x-large;
-}
-.nav-links a:hover {
-    font-size: xx-large;
-    color: #FFF07C;
-}
-
-.header{
-    text-align: center;
-    color: #FFF07C;
-    font-size: 3em;
-    text-transform: uppercase;
-    margin-top: -3%;
-    margin-bottom: -7%;
-}
-.motto {
-    margin-top: -5%;
-}
-.intro-premise {
-    text-align: center;
-}
-.rules {
-    color: red;  
-    text-align: center;
-    margin-top: auto;
-}
-
 h1 {
     text-align: center;
     color: #FFF07C;
@@ -67,12 +17,9 @@ h2 {
     margin-bottom: auto;
 }
 
-
-
 h3 {
     text-align: center;
 }
-
 
 h4 {
     display: flex;
@@ -86,6 +33,59 @@ p {
     text-align: center;
 }
 
+
+.navbar {
+    background-color: #32CD32;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+.navbar-brand {
+    margin-top: -9%;
+    margin-bottom: -9%;
+}
+.nav-button {
+    width: 20%;
+}
+.nav-button:hover {
+    font-size: large;
+}
+
+.nav-links {
+    display: flex;
+    list-style: none;
+    width: 35%;
+    gap: 3rem;
+}
+.nav-links a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: x-large;
+}
+.nav-links a:hover {
+    font-size: xx-large;
+    color: #FFF07C;
+}
+
+
+.header{
+    text-align: center;
+    color: #FFF07C;
+    margin-top: -3%;
+    margin-bottom: -7%;
+}
+.motto {
+    margin-top: -5%;
+}
+.intro-premise {
+    text-align: center;
+}
+.rules {
+    color: red;  
+    text-align: center;
+}
 .intro-demo {
     display: flex;
     align-items: center;
@@ -106,7 +106,6 @@ p {
     margin-bottom: -15%;
     border: solid black 5px;
     border-radius: 5px;
-    height: 3em;
     width: 15%;
     text-align: center;
     color: white;
@@ -116,26 +115,37 @@ p {
     font-size: larger;
 }
 
+input {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: solid 5px;
+    height: 3em;
+    border-radius: 5px;
+}
+
 .login-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: center; */
-    /* width: 50%; */
-    /* margin: auto; */
-    margin-top: 1%;
+}
+.login-input{
+    display: flex;
+    height: 3em;
+    align-items: center;
+    justify-content: center;
+    color: #32CD32;
+    gap: 2px;
+    margin-top: 5px;
 }
 .switch-link {
-    background-color: red;
-    display: flex;
-    align-items: center;
-    /* justify-content: center; */
-    margin: auto;
-    border: solid purple 5px;
-    border-radius: 5px;
-    width: 90%;
     color: white;
-    font-family: 'Trebuchet MS', sans-serif; 
+    margin-top: 10px;
+    margin-bottom: -15px;
+    width: 100%;
+}
+.switch-link:hover {
+    font-size: large;
 }
 
 button {
@@ -147,23 +157,15 @@ button {
     border: solid black 5px;
     border-radius: 5px;
     height: 3em;
-    /* width: 15%; */
+    width: 20em;
     color: white;
-    font-family: 'Trebuchet MS', sans-serif; 
+    font-family: 'Trebuchet MS', sans-serif;
+    font-size: medium; 
 }
 button:hover {
-    font-size: larger;
+    font-size: large;
 }
 
-input {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* flex-direction: row; */
-    border: solid 4px;
-    padding-block: 5%;
-    border-radius: 5px;
-}
 
 .update-buttons {
     display: flex;
@@ -181,6 +183,7 @@ input {
     margin-top: 1%;
     gap: 5px
 }
+
 
 .game-h2 {
     text-align: center;
@@ -204,12 +207,10 @@ input {
     color: white;
     font-family: 'Trebuchet MS', sans-serif;
 }
-
 .game-quote:hover {
     font-size: larger;
     color: white;
 }
-
 .game-shortening {
     background-color: #FFF07C;
     display: flex;
@@ -226,12 +227,10 @@ input {
     color: #32CD32;
     font-family: 'Trebuchet MS', sans-serif;
 }
-
 .game-shortening:hover {
     font-size: larger;
     color: #32CD32;
 }
-
 .game-p1 {
     background-color: red;
     display: flex;
@@ -248,16 +247,63 @@ input {
     color: white;
     font-family: 'Trebuchet MS', sans-serif;
 }
-
 .game-p1:hover {
     font-size: larger;
 }
+
+
+#account-user-details {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: x-large;
+    border: solid black 5px;
+    width: 30%;
+    /* padding: 10px; */
+    /* margin-top: 5%; */
+    margin-left: 5%;
+    background-color: white;
+    /* color: #fff; */
+    border-radius: 8px;
+}
+.account-played {
+    background-color: #FFF07C;
+    border-bottom: solid 5px;
+    width: 100%;
+}
+.account-played:hover {
+    font-size: larger;
+}
+.account-won {
+    background-color: #32CD32;
+    border-bottom: solid 5px;
+    width: 100%;
+}
+.account-won:hover {
+    font-size: larger;
+}
+.account-lost {
+    background-color: red;
+    border-bottom: solid 5px;
+    width: 100%;
+}
+.account-lost:hover {
+    font-size: larger;
+}   
+.account-ratio {
+    background-color: #7EE8FA;
+    border-top: solid 5px;
+    width: 100%;
+}
+.account-ratio:hover {
+    font-size: larger;
+}
+
 
 .footer {
     position: absolute;
     background-color: #32CD32; 
     color: white; 
-    padding: 1rem;
+    /* padding: 1rem; */
     width: 100%;
     margin-top: 20%;
 }
@@ -298,7 +344,6 @@ input {
     font-size: larger;
     color: #FFF07C;
 }
-
 .footerlink {
     width: 40px;
     height: 40px;
