--- a/src/index.css
+++ b/src/index.css
@@ -148,23 +148,6 @@ input {
     font-size: large;
 }
 
-button {
-    background-color: red;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border: solid black 5px;
-    border-radius: 5px;
-    height: 3em;
-    width: 20em;
-    color: white;
-    font-family: 'Trebuchet MS', sans-serif;
-    font-size: medium; 
-}
-button:hover {
-    font-size: large;
-}
 
 
 .update-buttons {
@@ -211,6 +194,29 @@ button:hover {
     font-size: larger;
     color: white;
 }
+
+.game-difficulty {
+  background-color: red;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  /* justify-content: space-evenly; */
+  margin: auto;
+  /* margin-top: 15px; */
+  margin-bottom: 20px;
+
+  border: solid black 5px;
+  border-radius: 5px;
+  height: 3em;
+  width: 15%;
+  text-align: center;
+  color: white;
+  font-family: 'Trebuchet MS', sans-serif;
+}
+.game-difficulty:hover {
+  font-size: larger;
+  color: white;
+}
 .game-shortening {
     background-color: #FFF07C;
     display: flex;
@@ -238,11 +244,11 @@ button:hover {
     justify-content: center;
     margin: auto;
     margin-top: 15px;
-    margin-bottom: 20%;
+    margin-bottom: 50px;
     border: solid black 5px;
     border-radius: 5px;
     height: 3em;
-    width: auto;
+    /* width: auto; */
     text-align: center;
     color: white;
     font-family: 'Trebuchet MS', sans-serif;
@@ -352,4 +358,23 @@ button:hover {
 .user-avatar-image {
     width: 2.5rem;
     height: 2.5rem
+}
+
+
+button {
+  background-color: red;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: solid black 5px;
+  border-radius: 5px;
+  height: 3em;
+  width: 20em;
+  color: white;
+  font-family: 'Trebuchet MS', sans-serif;
+  font-size: medium; 
+}
+button:hover {
+  font-size: large;
 }
