--- a/src/index.css
+++ b/src/index.css
@@ -42,8 +42,8 @@ p {
     width: 100%;
 }
 .navbar-brand {
-    margin-top: -9%;
-    margin-bottom: -9%;
+    margin-top: -8%;
+    margin-bottom: -8%;
 }
 .nav-button {
     width: 20%;
@@ -174,6 +174,38 @@ input {
     font-size: 3em;
     margin-top: 2%;
 }
+.game-difficulty-wrap {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.game-difficulty {
+  background-color: red;
+  margin: 10px;
+  margin-bottom: 15px;
+  border: solid black 5px;
+  border-radius: 5px;
+  height: 3em;
+  width: 10%;
+  text-align: center;
+  color: white;
+  font-family: 'Trebuchet MS', sans-serif;
+}
+.game-difficulty:hover {
+  font-size: larger;
+  color: white;
+}
+.game-input {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    margin-top: 20px;
+    width: 40%;
+    height: 4em;
+    text-align: center;
+}
 .game-quote {
     background-color: red;
     display: flex;
@@ -194,31 +226,8 @@ input {
     font-size: larger;
     color: white;
 }
-
-.game-difficulty {
-  background-color: red;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  /* justify-content: space-evenly; */
-  margin: auto;
-  /* margin-top: 15px; */
-  margin-bottom: 20px;
-
-  border: solid black 5px;
-  border-radius: 5px;
-  height: 3em;
-  width: 15%;
-  text-align: center;
-  color: white;
-  font-family: 'Trebuchet MS', sans-serif;
-}
-.game-difficulty:hover {
-  font-size: larger;
-  color: white;
-}
 .game-shortening {
-    background-color: #FFF07C;
+    background-color: #32CD32;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -230,12 +239,12 @@ input {
     height: 3em;
     width: 15%;
     text-align: center;
-    color: #32CD32;
+    color: white;
     font-family: 'Trebuchet MS', sans-serif;
 }
 .game-shortening:hover {
     font-size: larger;
-    color: #32CD32;
+    color: white;
 }
 .game-p1 {
     background-color: red;
