--- a/src/index.css
+++ b/src/index.css
@@ -128,6 +128,7 @@ input {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 3%;
 }
 .login-input{
     display: flex;
